Report component error in PrinterSetupResult

Add an error code that represents component installation error. This
error is reported in UMA metrics. It is not surfaced to user since no
action items for users on such occasions.

BUG=chromium:822016
TEST=manually setup a printer successfully.

Change-Id: I5b9e2e9ce0cc68a51ca1ce0d7c0c2bc0b6139663
Reviewed-on: https://chromium-review.googlesource.com/1026195
Reviewed-by: Sean Kau <skau@chromium.org>
Reviewed-by: Lei Zhang <thestig@chromium.org>
Commit-Queue: Xiaochu Liu <xiaochu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559659}
Former-commit-id: af1b2f6ee5cbd2dd2024de8d2d7c8ec8b5f2d8bb